# cipherpad

./: README.md  index.html  package-lock.json  package.json
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/cipherpad/: crypto.rs  db.rs  mod.rs  utils.rs
src/api/: cipherpad.ts  pad.ts
src/providers/: CipherpadProvider.tsx
src/routes/: app.tsx  pad-blob-view.tsx  pad-edit.tsx  root.tsx
src/types/: pad.ts
src/utils/: pad-utils.ts
