[package]
name = "cipherpad"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["dialog-save", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.29.0", features = ["bundled", "blob", "uuid"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
anyhow = "1.0.70"
ring = "0.16.20"
base64 = "0.21.4"
file-format = "0.20.0"
argon2 = "0.5.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
